--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4.38"
 log = "0.4.22"
 rand = "0.8.5"
 serde = "1.0.209"
 serde_json = "1.0.128"
 sha2 = "0.10.8"
+uuid = "1.10.0"
