--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ chrono = "0.4.38"
 log = "0.4.22"
 rand = "0.8.5"
 serde = "1.0.209"
+serde_derive = "1.0.210"
 serde_json = "1.0.128"
 sha2 = "0.10.8"
 uuid = "1.10.0"
