--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 chrono = "0.4.38"
 ed25519-dalek = "2.1.1"
+hex = "0.4.3"
 libp2p = "0.54.1"
 log = "0.4.22"
 once_cell = "1.19.0"
