--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,16 +4,32 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.38"
-ed25519-dalek = "2.1.1"
-hex = "0.4.3"
-libp2p = "0.54.1"
-log = "0.4.22"
-once_cell = "1.19.0"
-rand = "0.8.5"
-serde = "1.0.209"
-serde_derive = "1.0.210"
+# chrono = "0.4.38"
+# ed25519-dalek = "2.1.1"
+# hex = "0.4.3"
+# libp2p = "0.54.1"
+# log = "0.4.22"
+# once_cell = "1.19.0"
+# rand = "0.8.5"
+# serde = "1.0.209"
+# serde_derive = "1.0.210"
+# serde_json = "1.0.128"
+# sha2 = "0.10.8"
+# tokio = "1.40.0"
+# uuid = "1.10.0"
+
+uuid = { version = "0.8", features = ["serde", "v4"] }
+chrono = "0.4"
+sha2 = "0.9.8"
+sha256 = "1.0.3"
+serde = {version = "1.0.210", features = ["derive"] }
+# serde_json = "1.0"
+libp2p = { version = "0.39", features = ["tcp-tokio", "mdns"] }
+tokio = { version = "1.0", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread", "sync", "time"] }
+hex = "0.4"
+once_cell = "1.5"
+log = "0.4"
+rand = "0.7"
+periodic = "0.1.1"
+num-bigint = "0.4.3"
 serde_json = "1.0.128"
-sha2 = "0.10.8"
-tokio = "1.40.0"
-uuid = "1.10.0"
